--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
  "devDependencies": {
   "@babel/eslint-parser": "^7.26.5",
   "@eslint/js": "^9.18.0",
+  "@vitejs/plugin-vue": "^5.2.1",
   "eslint": "^9.18.0",
   "eslint-config-prettier": "^10.0.1",
   "eslint-plugin-prettier": "^5.2.3",
